--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3"
   }
